User component fix

--- a/angular/src/app/main/users/users.component.html
+++ b/angular/src/app/main/users/users.component.html
@@ -25,7 +25,7 @@
                             <div class="row align-items-center mb-4">
                                 <div class="col-md-3 kt-margin-b-20-tablet-and-mobile">
                                     <div class="kt-input-icon kt-input-icon--left">
-                                        <input  [(ngModel)]="filterText" name="filterText"
+                                        <input 
                                             autoFocus class="form-control m-input"
                                             [placeholder]="l('SearchWithThreeDot')" type="text">
                                             <span class="kt-input-icon__icon kt-input-icon__icon--left">
