--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -27,12 +27,12 @@
                                             data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">{{categoryName}}</button>
                                         <div class="dropdown-menu" [(ngModel)]="categoryName" name="categoryName">
-                                            <a class="dropdown-item" *ngFor="let item of categoriesList"
+                                            <a href="javascript:void(0)" class="dropdown-item" *ngFor="let item of categoriesList"
                                                 (click)="categoryClick(item.value,item.name)">
                                                 {{item.name}}
                                             </a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" (click)="routeToAddNewCategory()"><i class="fa fa-plus"></i>
+                                            <a href="javascript:void(0)" class="dropdown-item" (click)="routeToAddNewCategory()"><i class="fa fa-plus"></i>
                                                 {{"AddNew" | localize}}</a>
                                         </div>
                                     </div>
