Localization of All Components in Common Folder

--- a/angular/src/app/shared/common/customizable-dashboard/widgets/widget-daily-sales/widget-daily-sales.component.html
+++ b/angular/src/app/shared/common/customizable-dashboard/widgets/widget-daily-sales/widget-daily-sales.component.html
@@ -2,7 +2,7 @@
     <div class="kt-portlet__head">
         <div class="kt-portlet__head-label">
             <h3 class="kt-portlet__head-title">
-                Daily Sales
+                {{"WidgetDailySales" | localize}}
             </h3>
         </div>
     </div>
