--- a/angular/src/app/shared/common/customizable-dashboard/widgets/widget-profit-share/widget-profit-share.component.html
+++ b/angular/src/app/shared/common/customizable-dashboard/widgets/widget-profit-share/widget-profit-share.component.html
@@ -2,9 +2,9 @@
     <div class="kt-portlet__head">
         <div class="kt-portlet__head-label">
             <h3 class="kt-portlet__head-title">
-                Profit Share
+                {{"WidgetProfitShare" | localize}}
                 <small>
-                    Profit Share between customers
+                    {{"Profit Share between customers" | localize}}
                 </small>
             </h3>
         </div>
