--- a/angular/src/app/shared/common/customizable-dashboard/widgets/widget-regional-stats/widget-regional-stats.component.html
+++ b/angular/src/app/shared/common/customizable-dashboard/widgets/widget-regional-stats/widget-regional-stats.component.html
@@ -3,7 +3,7 @@
         <div class="kt-portlet__head-label">
 
             <h3 class="kt-portlet__head-title">
-                Regional Stats
+                {{"RegionalStats" | localize}}
             </h3>
 
         </div>
@@ -17,11 +17,11 @@
                     <thead>
                         <tr>
                             <td class="m-widget11__label">#</td>
-                            <td class="m-widget11__app">Country</td>
-                            <td class="m-widget11__sales">Sales</td>
-                            <td class="m-widget11__change">Change</td>
-                            <td class="m-widget11__price">Avg Price</td>
-                            <td class="m-widget11__total">Total</td>
+                            <td class="m-widget11__app">{{"Country" | localize}}</td>
+                            <td class="m-widget11__sales">{{"Sales" | localize}}</td>
+                            <td class="m-widget11__change">{{"Change" | localize}}</td>
+                            <td class="m-widget11__price">{{"AvgPrice" | localize}}</td>
+                            <td class="m-widget11__total">{{"Total" | localize}}</td>
                         </tr>
                     </thead>
                     <!--end::Thead-->
