--- a/angular/src/app/shared/common/customizable-dashboard/widgets/widget-general-stats/widget-general-stats.component.html
+++ b/angular/src/app/shared/common/customizable-dashboard/widgets/widget-general-stats/widget-general-stats.component.html
@@ -2,12 +2,12 @@
     <div class="kt-portlet__head">
         <div class="kt-portlet__head-label">
             <h3 class="kt-portlet__head-title">
-                General Stats
+                {{"WidgetGeneralStats" | localize}}
             </h3>
         </div>
         <div class="kt-portlet__head-toolbar">
             <a href="javascript:;" class="btn btn-primary" (click)="generalStatsPieChart.reload()">
-                <i class="fa fa-redo"></i> Refresh
+                <i class="fa fa-redo"></i> {{"Refresh" | localize}}
             </a>
         </div>
     </div>
