--- a/angular/src/app/shared/common/customizable-dashboard/widgets/widget-top-stats/widget-top-stats.component.html
+++ b/angular/src/app/shared/common/customizable-dashboard/widgets/widget-top-stats/widget-top-stats.component.html
@@ -6,10 +6,10 @@
                     <div class="kt-widget24__details">
                         <div class="kt-widget24__info">
                             <h4 class="kt-widget24__title">
-                                Total Profit
+                                {{"TotalProfit" | localize}}
                             </h4>
                             <span class="kt-widget24__desc">
-                                All Customs Value
+                                {{"All Customs Value" | localize}}
                             </span>
                         </div>
                         <span class="kt-widget24__stats kt--font-brand">
@@ -26,7 +26,7 @@
                     </div>
                     <div class="kt-widget24__action">
                         <span class="kt-widget24__change">
-                            Change
+                            {{"Change" | localize}}
                         </span>
                         <span class="kt-widget24__number">
                             <span class="counterup">{{dashboardTopStats.totalProfitChange}}</span>%
@@ -40,10 +40,10 @@
                     <div class="kt-widget24__details">
                         <div class="kt-widget24__info">
                             <h4 class="kt-widget24__title">
-                                New Feedbacks
+                                {{"New Feedbacks" | localize}}
                             </h4>
                             <span class="kt-widget24__desc">
-                                Customer Review
+                                {{"Customer Review" | localize}}
                             </span>
                         </div>
                         <span class="kt-widget24__stats kt--font-info" counto [step]="30" [duration]="1"
@@ -58,7 +58,7 @@
                     </div>
                     <div class="kt-widget24__action">
                         <span class="kt-widget24__change">
-                            Change
+                            {{"Change" | localize}}
                         </span>
                         <span class="kt-widget24__number">
                             <span class="counterup">{{dashboardTopStats.newFeedbacksChange}}</span>%
@@ -71,10 +71,10 @@
                     <div class="kt-widget24__details">
                         <div class="kt-widget24__info">
                             <h4 class="kt-widget24__title">
-                                New Orders
+                                {{"New Orders" | localize}}
                             </h4>
                             <span class="kt-widget24__desc">
-                                Fresh Order Amount
+                                {{"Fresh Order Amount" | localize}}
                             </span>
                         </div>
                         <span class="kt-widget24__stats kt--font-info" counto [step]="30" [duration]="1"
@@ -89,7 +89,7 @@
                     </div>
                     <div class="kt-widget24__action">
                         <span class="kt-widget24__change">
-                            Change
+                            {{"Change" | localize}}
                         </span>
                         <span class="kt-widget24__number">
                             <span class="counterup">{{dashboardTopStats.newOrdersChange}}</span>%
@@ -102,10 +102,10 @@
                     <div class="kt-widget24__details">
                         <div class="kt-widget24__info">
                             <h4 class="kt-widget24__title">
-                                New Users
+                                {{"New UsersNew Users" | localize}}
                             </h4>
                             <span class="kt-widget24__desc">
-                                Joined New User
+                                {{"Joined New User" | localize}}
                             </span>
                         </div>
                         <span class="kt-widget24__stats kt--font-info" counto [step]="30" [duration]="1"
@@ -119,7 +119,7 @@
                             aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span class="kt-widget24__change">
-                        Change
+                        {{"Change" | localize}}
                     </span>
                     <span class="kt-widget24__number">
                         <span class="counterup">{{dashboardTopStats.newUsersChange}}</span>%
