Localization Done and Fixed dropdown UI issues in Chart of Accounts Screen

--- a/angular/src/app/shared/layout/footer.component.html
+++ b/angular/src/app/shared/layout/footer.component.html
@@ -2,7 +2,7 @@
     <div [class]="containerClass" *ngIf="useBottomDiv">
         <div class="kt-footer__bottom">
             <div class="kt-footer__copyright">
-                Zinlo <span
+                {{"Zinlo" | localize}} <span
                     *ngIf="appSession.tenant && appSession.tenant.edition && appSession.tenant.edition.displayName">
                     {{appSession.tenant.edition.displayName}}</span> | v{{appSession.application.version}}
                 [{{releaseDate}}]
@@ -14,7 +14,7 @@
     <div [class]="containerClass" *ngIf="!useBottomDiv">
         <div class="kt-footer__wrapper">
             <div class="kt-footer__copyright">
-                Zinlo <span
+                {{"Zinlo" | localize}} <span
                     *ngIf="appSession.tenant && appSession.tenant.edition && appSession.tenant.edition.displayName">
                     {{appSession.tenant.edition.displayName}}</span> | v{{appSession.application.version}}
                 [{{releaseDate}}]
