--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -114,10 +114,12 @@
                         </div>
                         <div class="form-group margin-top-5">
                             <button *ngIf="editAccountCheck == false" class="btn btn-brand" type="submit"  [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
-                                {{"Create" | localize}}
+                                <i class="fa fa-save"></i>
+                                <span>{{"Create" | localize}}</span>
                             </button>
                             <button *ngIf="editAccountCheck == true" class="btn btn-brand" type="submit"  [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" >
-                                {{"Update" | localize}}
+                                <i class="fa fa-save"></i>
+                                <span>{{"Update" | localize}}</span>
                             </button>
                         </div>
                     </form>
