--- a/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
+++ b/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
@@ -38,7 +38,8 @@
                         </div>
                         <div class="form-group margin-top-5">
                             <button class="btn btn-brand" type="submit">
-                                {{"Save" | localize}}
+                                <i class="fa fa-save"></i>
+                                <span>{{"Save" | localize}}</span>
                             </button>
                         </div>
                     </form>
