--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -160,7 +160,8 @@
                                             </div>
                                             <div class="form-group margin-top-5">
                                                 <button [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" class="btn btn-brand" type="submit">
-                                                    {{buttonTitle}}
+                                                    <i class="fa fa-save"></i>
+                                                    <span>{{buttonTitle}}</span>{{buttonTitle}}
                                                 </button>
                                             </div>
                                         </form>
