--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
@@ -130,7 +130,8 @@
                         </div>
                         <div class="form-group margin-top-5">
                             <button [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" (click)="SaveItem()" class="btn btn-brand" type="submit">
-                                {{Save}}
+                                <i class="fa fa-save"></i>
+                                <span>{{"Save" | localize}}</span>
                             </button>                     
                         </div>
                     </form>
